# STAMP-Workbench

./: README.md  __init__.py  pyproject.toml  server.py  service.py
stamp_workbench/: catalog.py  server.py  service.py
stamp_workbench/static/: app.js  index.html  styles.css
tests/: test_frontend_assets.py  test_service.py
