[project]
name = "stamp-workbench"
version = "0.2.0"
description = "Browser-based pipeline composer and run monitor for STAMP workflows"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
"stamp-workbench" = "stamp_workbench.server:main"

[project.urls]
"Homepage" = "https://github.com/mducducd/STAMP-Workbench"
"Bug Tracker" = "https://github.com/mducducd/STAMP-Workbench/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["stamp_workbench"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/stamp_workbench",
]
